--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   model_viewer_plus: ^1.7.0
   provider: ^6.1.5+1
   connectivity_plus: ^6.1.0
-  uuid: ^4.5.1
+  uuid: ^4.5.2
   flutter_animate: ^4.5.0
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.1.0 # Add this line
@@ -76,6 +76,9 @@ dependencies:
   http: ^1.2.0
   flutter_launcher_icons: ^0.13.1
   webview_windows: ^0.4.0
+  google_generative_ai: ^0.4.7
+  flutter_chat_ui: ^1.6.15
+  flutter_chat_types: ^3.6.2
 
 dev_dependencies:
   flutter_test:
